# LabKAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.deps  Readme.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: __init__.py  config.py  main.py
app/adapters/: graph_client.py  graph_store_factory.py  kag_client.py  kag_query_adapter.py  neo4j_graph_store.py  neo4j_query_store.py  openspg_client.py  openspg_mapper.py
app/api/: evidence.py  health.py  literature.py  papers.py
app/schemas/: common.py  document.py  errors.py  evidence.py  extraction.py  paper.py  response.py
app/services/: chunker.py  document_parser.py  evidence_binder.py  paper_extractor.py  pdf_parser.py  skill_orchestrator.py
app/storage/: file_store.py  metadata_store.py
app/utils/: logging.py  time.py
deploy/neo4j/: docker-compose.yml
docs/: API.md  LabKAG_Literature_Schema_v0.1.md  LabKAG_v0.1.md  plan.md  planv0.1.md
docs/superpowers/plans/: 2026-06-29-labkag-v0-1-framework.md
examples/: extract_paper.py  ingest_paper.py  query_literature.py  search_evidence.py  upload_paper.py
scripts/: init_storage.py  run_dev.ps1  verify_m7_closed_loop.py  verify_m8_neo4j_closed_loop.py
tests/: test_chunker.py  test_config.py  test_evidence_binder.py  test_extraction_schema.py  test_graph_adapter.py  test_graph_store_factory.py  test_health.py  test_kag_client.py  test_m7_verify_script.py  test_m8_verify_script.py  test_neo4j_query_store.py  test_pdf_parser.py  test_skill_api.py
